Try to fix problems on IE

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1111,7 +1111,7 @@ footer{
 .moon-bg {
   position: absolute;
   width: 100%;
-  height: auto;
+  //height: auto;
   bottom:0;
 }
 
